[project]
name = "hpc-client"
version = "0.1.0"
description = "Student client for the HPC Scheduler"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-autorefs",
  "pymdown-extensions",
  "mkdocs-glightbox",
]

[project.scripts]
hpc-client = "hpc_client.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"